[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/BottomHud/PotionSlot.gd" type="Script" id=1]
[ext_resource path="res://UI/BottomHud/potion_slot.png" type="Texture" id=2]
[ext_resource path="res://Fonts/RobotoSlab-Thin.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 1, 1, 1, 0.7 )
use_filter = true
extra_spacing_top = -44
extra_spacing_space = 40
font_data = ExtResource( 3 )

[node name="Slot" type="Button"]
margin_right = 479.0
margin_bottom = 77.0
rect_min_size = Vector2( 38, 38 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
button_mask = 2
text = "1 "
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 8
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Content"]
margin_left = 12.0
margin_top = 12.0
margin_right = 471.0
margin_bottom = 65.0
expand = true
stretch_mode = 6

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
